--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
