--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react-spinners": "^0.15.0"
   },
   "devDependencies": {
+    "@types/node": "^24.5.2",
+    "@types/react": "^19.1.13",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.9.2"
   }
 }
