--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "framer-motion": "^12.4.6",
     "lucide-react": "^0.475.0",
-    "next": "15.1.7",
+    "next": "^15.1.9",
     "radix-ui": "^1.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
