--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@vercel/analytics": "^1.6.1",
     "framer-motion": "^12.4.6",
     "lucide-react": "^0.475.0",
     "next": "^15.1.9",
